# idle-studio

./: AGENT.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: DIRECTOR.md
src/: error.rs  job.rs  lib.rs  main.rs  proptests.rs  queue.rs  runner.rs  tui.rs
unraid/: app-studio.xml  idle-studio.xml
