[package]
name = "idle-studio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "IdleScreen Director TUI — queue renders, long-form, music beds"
repository = "https://github.com/idlescreen/idle-studio"
readme = "README.md"

[[bin]]
name = "idle-studio"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
