[package]
name = "idle-studio"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "IdleScreen Director — queue offline render jobs (CLI + TUI)"
repository = "https://github.com/idlescreen/idle-studio"
readme = "README.md"

[lib]
name = "idle_studio"
path = "src/lib.rs"

[[bin]]
name = "idle-studio"
path = "src/main.rs"

[[bin]]
name = "app-studio"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
crossterm = "0.29"
ratatui = "0.30"

[dev-dependencies]
proptest = "1"
